[package]
name = "landing_page"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
egui = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"